# web25-991-bloques-reciclables

./: .gitignore  CLAUDE.md  COMPATIBILITY.md  PROJECT.yaml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.claude/commands/: consultar-99999.md
.github/workflows/: ci.yml
docs/: 991-vs-996.md  COMPARATIVA.md  NOTA-TEMPORAL-ulfblk-api-keys.md  PROMPT-ARRANQUE.md  ROADMAP.md  analisis-031-vs-048.md  brief.md  catalogo-bloques.md  estructura-proyecto.md  plan-arquitectura.md  por-que-open-source.md  relacion-996-991.md
docs/consultas900/: eval-proyecto-deepseek-ticket-766.md  eval-proyecto-gemini-ticket-760.md  sintesis-evaluaciones.md
docs/marketing/: hilos-twitter.md
docs/recetas/: api-simple.md  bot-citas.md  bot-whatsapp.md  edusync.md  mvp-sin-login.md  saas-multitenant.md
examples/api-simple/: README.md  main.py  pyproject.toml
examples/bot-citas/: README.md  bot.py  bot_citas.db  database.py  main.py  models.py  pyproject.toml  seed.py  start.sh
examples/bot-citas/frontend/: package-lock.json  package.json
examples/bot-citas/frontend/app/: globals.css  layout.tsx  page.tsx
examples/bot-citas/frontend/app/admin/: admin-app.tsx  page.tsx
examples/bot-citas/frontend/app/api/[...path]/: route.ts
examples/bot-citas/frontend/app/api/appointments/: route.ts
examples/bot-citas/frontend/app/api/slots/[date]/: route.ts
examples/edusync/: database.py  main.py  models.py  pyproject.toml  seed.py  start.sh
examples/edusync/frontend/: package.json  tailwind.config.ts
examples/edusync/frontend/app/: layout.tsx  page.tsx
examples/edusync/frontend/app/admin/: admin-app.tsx
examples/edusync/frontend/app/api/[...path]/: route.ts
examples/edusync/frontend/app/api/auth/login/: route.ts
examples/edusync/frontend/app/login/: page.tsx
examples/edusync/frontend/app/student/: layout.tsx  page.tsx
examples/edusync/frontend/app/student/courses/: page.tsx
examples/edusync/frontend/app/student/courses/[id]/: page.tsx
examples/edusync/frontend/app/student/schedule/: page.tsx
examples/edusync/frontend/app/teacher/: layout.tsx  page.tsx
examples/edusync/frontend/app/teacher/courses/new/: page.tsx
examples/edusync/frontend/app/teacher/schedule/: page.tsx
examples/mvp-sin-login/: README.md  pyproject.toml  start.sh
examples/mvp-sin-login/backend/: main.py
examples/mvp-sin-login/frontend/: package-lock.json  package.json
examples/mvp-sin-login/frontend/app/: page.tsx
examples/mvp-sin-login/frontend/app/api/data/: route.ts
examples/mvp-sin-login/frontend/src/: page.tsx
examples/saas-multitenant/: README.md  database.py  main.py  models.py  pyproject.toml  seed.py
scripts/: publish.sh  release.sh  version.py
templates/template-backend-fastapi/: copier.yaml
templates/template-backend-fastapi/{{ project_slug }}-backend/: .env.example.jinja  README.md.jinja  pyproject.toml.jinja
templates/template-backend-fastapi/{{ project_slug }}-backend/src/{{ module_name }}/: config.py.jinja  main.py.jinja
templates/template-backend-fastapi/{{ project_slug }}-backend/src/{{ module_name }}/routes/: auth.py.jinja  health.py
templates/template-backend-fastapi/{{ project_slug }}-backend/tests/: test_health.py
templates/template-base/: copier.yaml
templates/template-base/{{ project_slug }}/: .env.example  .gitignore  README.md.jinja  package.json.jinja  pnpm-workspace.yaml  turbo.json
templates/template-frontend-nextjs/: copier.yaml
templates/template-frontend-nextjs/{{ project_slug }}-frontend/: .env.local.example.jinja  README.md.jinja  package.json.jinja  tailwind.config.ts.jinja
templates/template-frontend-nextjs/{{ project_slug }}-frontend/src/app/: layout.tsx.jinja  page.tsx.jinja
templates/template-frontend-nextjs/{{ project_slug }}-frontend/src/app/dashboard/: layout.tsx.jinja  page.tsx.jinja
templates/template-frontend-nextjs/{{ project_slug }}-frontend/src/app/login/: page.tsx.jinja
templates/template-frontend-nextjs/{{ project_slug }}-frontend/src/lib/: bloque-client.ts.jinja
templates/template-frontend-nextjs/{{ project_slug }}-frontend/src/providers/: app-providers.tsx.jinja
templates/template-frontend-nextjs/{{ project_slug }}-frontend/src/styles/: globals.css
tests/integration/: conftest.py  test_auth_db.py  test_full_stack.py  test_model_composition.py  test_multitenant_db.py
tests/recipes/api_simple/: test_api_simple.py
tests/recipes/bot_citas/: test_bot_citas.py
tests/recipes/edusync/: EVALUACION.md  models.py  test_edusync_auth.py  test_edusync_billing.py  test_edusync_core.py  test_edusync_smart.py
tests/recipes/mvp_sin_login/: test_mvp_sin_login.py
