[project]
name = "bloques-reciclables"
version = "0.1.0"
description = "Ecosistema open source de bloques de codigo reciclables"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/python/*", "examples/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["B008"]  # Allow Depends() in FastAPI default args

[tool.pytest.ini_options]
testpaths = ["packages/python", "tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "bloque-testing",
    "fakeredis[lua]>=2.21",
]

[tool.uv.sources]
bloque-testing = { workspace = true }
