[project]
name = "example-saas-multitenant"
version = "0.1.0"
description = "SaaS multitenant example using ulfblk-core + ulfblk-auth + ulfblk-db + ulfblk-multitenant"
requires-python = ">=3.11"
dependencies = [
    "ulfblk-core",
    "ulfblk-auth",
    "ulfblk-db",
    "ulfblk-multitenant",
    "aiosqlite>=0.20",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["httpx>=0.27"]

[tool.uv.sources]
ulfblk-core = { workspace = true }
ulfblk-auth = { workspace = true }
ulfblk-db = { workspace = true }
ulfblk-multitenant = { workspace = true }
